# tarot_juicer

./: .gitignore  0001-Proposed-fix-for-issue-30.patch  0001-fix-missing-1-required-positional-argument-x.patch  0001-setup-multiple-databases-and-inject-heroku-postgres-.patch  ChatGPT-detailing-docker-and-Nix-deployment.md  Procfile  README.md  contents.txt  db.sqlite3  db.sqlite3.bak1Feb2021  db.sqlite3.bak7Dec2020  db.sqlite3.broken19June2020  db.sqlite3.working19June2020  fix_broken_thumbnails.patch  requirements-2nd.txt  requirements-3rd.txt  requirements-4th.txt  requirements-old.txt  requirements.in  requirements.txt  requirements.txt.bak19Nov2021  runtime.txt
accounts/: admin.py  custom_decorator.py  models.py  urls.py  views.py
css/: carousel.css
django-accounts/: LICENSE  MANIFEST.in  README.md  pyproject.toml
django-accounts/django_accounts/: admin.py  apps.py  custom_decorator.py  models.py  views.py
django-accounts/django_accounts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django-accounts/django_accounts/management/commands/: create_fake_authenticated_user.py
django-accounts/django_accounts/migrations/: 0001_initial.py  0003_authtoggle_timeout.py  0006_rename_on_authtoggle_protected.py  0007_rename_protected_authtoggle_is_protected.py  0009_authtoggle_email.py
django-accounts/django_accounts/templates/accounts/: gateway.html
essays/: admin.py  models.py  urls.py  views.py
generators/: admin.py  models.py  urls.py  views.py
js/: carousel.js
landings/: admin.py  models.py  urls.py  views.py
scripts/: README.md  data.csv  (+13 more)
(+221 files in other folders)
